[gd_scene format=3 uid="uid://mp_menu_12345"]

[ext_resource type="Script" path="res://UI/multiplayer_menu.gd" id="1_mp_menu"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mp_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.2, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Multiplayer"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Player Name:"
horizontal_alignment = 1

[node name="PlayerNameInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your name"
alignment = 1

[node name="IPAddressInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter server IP (e.g., 192.168.1.100)"
alignment = 1

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HostButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Host Game"

[node name="JoinButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Join Game"

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Back"
